--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <ul class="navbar-nav" style="margin-left: auto;">
                     <hr>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="https://polygon.blockscout.com" target="_blank">Explroe</a>
+                        <a class="nav-link" aria-current="page" href="https://polygon.blockscout.com/address/0xcdDbd374A9dF30BbBE4Bc4c008fA229CB3587511?tab=contract" target="_blank">Explroe</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="https://www.analytixaudit.com" target="_blank">Audit</a>
@@ -56,10 +56,13 @@
                         <a class="nav-link" aria-current="page" href="https://quickswap.exchange/#/swap?currency0=ETH&currency1=0xcdDbd374A9dF30BbBE4Bc4c008fA229CB3587511&swapIndex=0" target="_blank">Trade</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="https://t.me/DeutscheMarkDDM" target="_blank">Socials</a>
+                        <a class="nav-link" aria-current="page" href="https://t.me/DeutscheMarkDDM" target="_blank">Telegram</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="https://docs.deutschemark-ddm.io" target="_blank">Docs</a>
+                        <a class="nav-link" aria-current="page" href="https://x.com/DDMdeutschemark" target="_blank">Twitter</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="https://doc.deutschemark-ddm.io" target="_blank">Docs</a>
                     </li>
                 </ul>
             </div>
@@ -78,7 +81,7 @@
                         <hr class="opacity-0">
                         <div class="row gap-2 justify-content-center justify-content-lg-start">
                             <button class="col-10 col-sm-5 col-lg-4 mt-3 btn-grad">Get Started</button>
-                            <a class="col-10 col-sm-5 col-lg-4 mt-3 btn-grad" href="https://docs.deutschemark-ddm.io" target="_blank" style="text-decoration: none;">
+                            <a class="col-10 col-sm-5 col-lg-4 mt-3 btn-grad" href="https://doc.deutschemark-ddm.io" target="_blank" style="text-decoration: none;">
                             Read DOCS</a>
                         </div>
                     </div>
@@ -204,26 +207,26 @@
         <div class="row justify-content-evenly text-center mt-5">
             <div class="col-12 col-sm-6 col-lg-3 mt-3">
                 <div class="content-card p-3 h-100" style="border-radius: 16px;">
+                    <img src="/images/team_1.png" width="512" height="512" class="bgc-dark img-fluid pill">
+                    <hr>
+                    <div class="fw-bold txt-primary">IT Specialist</div>
+                    <a target="_blank" class="mt-3">Mr. Samuel Slak</a>
+                </div>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-3 mt-3">
+                <div class="content-card p-3 h-100" style="border-radius: 16px;">
                     <img src="/images/team_2.png" width="512" height="512" class="bgc-dark img-fluid pill">
                     <hr>
-                    <div class="fw-bold txt-primary">CEO</div>
-                    <a target="_blank" class="mt-3">Reiner Ziesche</a>
+                    <div class="fw-bold txt-primary">Finance Specialist</div>
+                    <a target="_blank" class="mt-3">Mr. Takashi Shishido</a>
                 </div>
             </div>
             <div class="col-12 col-sm-6 col-lg-3 mt-3">
                 <div class="content-card p-3 h-100" style="border-radius: 16px;">
                     <img src="/images/team_3.png" width="512" height="512" class="bgc-dark img-fluid pill">
                     <hr>
-                    <div class="fw-bold txt-primary">COO</div>
-                    <a target="_blank" class="mt-3">Frank Matschke</a>
-                </div>
-            </div>
-            <div class="col-12 col-sm-6 col-lg-3 mt-3">
-                <div class="content-card p-3 h-100" style="border-radius: 16px;">
-                    <img src="/images/team_1.png" width="512" height="512" class="bgc-dark img-fluid pill">
-                    <hr>
-                    <div class="fw-bold txt-primary">CFO</div>
-                    <a target="_blank" class="mt-3">Setthana Sophakantri</a>
+                    <div class="fw-bold txt-primary">Finance Specialist</div>
+                    <a target="_blank" class="mt-3">Mrs. Barbara Paklak</a>
                 </div>
             </div>
             <div class="col-12 col-sm-6 col-lg-3 mt-3 d-none">
